k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: postgress
  template:
    metadata:
      labels:
        component: postgress    
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: mypvc    
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
