k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: LoadBalancer
  selector:
    component: myapp-web
  ports:
  - port: 3000
    targetPort: 3000
