k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: "ngnix"
    ngnix.ingress.kubernetes.io/use-regex: "true"
    ngnix.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules:
    - http:
        path: 
          - path: /?(.*)
            pathType: perfix
            backend:
              service:
                name: client-service
                port: 
                  number: 3000 
          - path: /?(.*)
            pathType: perfix
            backend:
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
